Attempt 2 to fix font face issue

--- a/painting.html
+++ b/painting.html
@@ -3,7 +3,7 @@
 <head>
   <link rel="stylesheet" href="painting.css">
   <meta charset="UTF-8" />
-  <title>Mirror</title>
+  <title>Painting</title>
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <meta name="description" content="" />
   <link rel="icon" href="favicon.png">
