--- a/history.html
+++ b/history.html
@@ -3,7 +3,7 @@
 <head>
   <link rel="stylesheet" href="history.css">
   <meta charset="UTF-8" />
-  <title>Mirror</title>
+  <title>History</title>
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <meta name="description" content="" />
   <link rel="icon" href="favicon.png">
